# educa

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/: branch.yaml
.github/ISSUE_TEMPLATE/: story.md
.github/workflows/: branch.yaml  ci.yaml  deploy.yaml  tests.yml
chat/: consumers.py  routing.py  urls.py  views.py
chat/static/chat/js/: chat_socket.js
chat/templates/chat/: room.html
config/: gunicorn.conf.py  nginx.conf
config/dev/: gunicorn.conf.py  nginx.conf
config/prod/: gunicorn.conf.py  nginx.conf
courses/: admin.py  factories.py  fields.py  forms.py  middleware.py  models.py  urls.py  views.py
courses/api/: serializers.py  urls.py  views.py
courses/fixtures/: subjects.json
courses/management/commands/: setup_test_data.py
courses/migrations/: 0001_initial.py  0002_video_text_image_file_content.py  0003_alter_course_owner_alter_course_subject_and_more.py  0004_alter_content_options_alter_module_options_and_more.py  0005_course_students.py  0006_alter_content_module.py  0007_alter_video_url.py  0008_alter_module_course.py
courses/static/courses/js/: reorder.js
courses/templates/courses/: content_form.html  content_list.html  course_delete.html  course_detail.html  course_form.html  course_list.html  course_manage_list.html  course_update.html  module_formset.html
courses/templates/courses/content/: file.html
courses/tests/: test_models.py  test_views.py
docs/: commands.md  digital-ocean.md  index.html  notes.txt  snippets.py  style.css
main/: asgi.py  routing.py  settings.py  urls.py
pages/: forms.py  urls.py  views.py
pages/templates/pages/: about.html  contact.html  home.html  privacy.html  terms.html  test-base-fullscreen.html
pages/tests/: test_forms.py  test_views.py
reqs/: api.rest  auth.rest  chat.rest  enroll_all.py  module_order.rest
static/css/: base.css
students/: forms.py  urls.py  views.py
students/management/commands/: enroll_reminder.py
students/templates/students/: enroll.html  registration.html  student_course_detail.html  student_course_list.html
templates/: 403.html  404.html  500.html  base.html
templates/account/: account_inactive.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/includes/: _pagination.html  alert.html  footer.html
templates/layouts/: base-fullscreen.html
templates/registration/: logged_out.html  login.html
templates/socialaccount/: login.html
users/: signals.py  tests.py  urls.py  views.py
users/templates/users/: profile.html
users/tests/: test_views.py
