[tool.isort]
profile = "black"
skip = ["docs", "migrations"]

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.poetry]
name = "educa"
version = "0.1.0"
description = "An online e-learning platform"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
Pillow = "^9.2.0"
black = "^22.6.0"
django-extensions = "^3.2.0"
django-embed-video = "^1.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
bandit = "^1.7.4"
safety = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
