[tool.isort]
profile = "black"
skip = ["docs", "migrations"]

[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.poetry]
name = "educa"
version = "0.1.0"
description = "An online e-learning platform"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
Pillow = "^9.2.0"
black = "^22.6.0"
django-extensions = "^3.2.0"
django-embed-video = "^1.4.5"
pip = "^22.2.2"
pymemcache = "^3.5.2"
djangorestframework = "^3.13.1"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
channels = "^3.0.5"
channels-redis = "^3.4.1"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
daphne = "^3.0.2"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
django-allauth = "^0.51.0"
sentry-sdk = "^1.9.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
bandit = "^1.7.4"
safety = "^2.1.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
