[tool.poetry]
name = "educa"
version = "0.1.0"
description = "An online e-learning system"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2 = "^2.9.9"
django-allauth = "^0.63.2"
sentry-sdk = "^2.3.1"
factory-boy = "^3.3.0"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
django-embed-video = "^1.4.10"
django-rest-framework = "^0.1.0"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
exclude = [
    "*migrations*",
    ]

[tool.isort]
profile = "black"
skip = ["docs", "migrations"]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.djlint]
exclude = ".venv,venv,.tox,.eggs,.git"
extend_exclude = ".custom"
blank_line_before_tag = "load,extends,include,block,blocktranslate"
blank_line_after_tag = "load,extends,include,endblock,endblocktranslate"
profile = "django"
max_line_length = 120
max_attribute_length = 120
use_gitignore = true
format_attribute_template_tags = true

[tool.djlint.css]
indent_size = 5

[tool.djlint.js]
indent_size = 5

[tool.coverage.run]
branch = true
omit = [
    # omit anything in a migrations directory anywhere
    "*/migrations/*",
    # omit the tests themselfves
    "*/tests/*",
    # omit everything in /usr
    "/usr/*",
    # omit these single files
    "main/asgi.py",
    "main/wsgi.py",
    "main/settings.py",
    "manage.py",
    "*/urls.py",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
show_contexts = true